--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     </button>
 
     <!-- PROPOSAL -->
-    <button class="webpage-menu-options" id="proposal-button">
+    <!-- <button class="webpage-menu-options" id="proposal-button">
       <a>THE PROPOSAL</a>
-    </button>
+    </button> -->
 
     <!-- ENTOURAGE -->
     <button class="webpage-menu-options" id="entourage-button">
@@ -98,12 +98,12 @@
     <div class="webpage-entourage-wrapmain-parents">
       <div class="webpage-entourage-entry">
         <div class="webpage-entourage-details">
-          <span class="parents">Parents of the Groom</span><br><br><span>Mr.Randy Molina</span><br><span>Mrs.Nelly Ann Molina</span>
+          <span class="header">Parents of the Groom</span><br><br><span>Mr.Randy Molina</span><br><span>Mrs.Nelly Ann Molina</span>
         </div>
       </div>
       <div class="webpage-entourage-entry">
         <div class="webpage-entourage-details">
-          <span class="parents">Parents of the Bride</span><br><br><span>Mr.Lirco Igos</span><br><span>Mrs.Amelia Igos</span>
+          <span class="header">Parents of the Bride</span><br><br><span>Mr.Lirco Igos</span><br><span>Mrs.Amelia Igos</span>
         </div>
       </div>
     </div>
@@ -112,11 +112,87 @@
     <div class="webpage-entourage-wrapmain-psponsors">
       <div class="webpage-entourage-entry">
         <div class="webpage-entourage-details">
-          <span class="parents">Principal Sponsors</span><br><br><span>Hon.Robert Ortega</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Hon.Charry Ortega</span><br><span>Hon.Joshue Santiago</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Hon.Rowenda Santiago</span><br><span>Hon.Alexander Cordova</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Mrs.Amelia Cordova</span><br><span>Mr.Luis Vicillaje</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Mrs.Pinky Mendoza</span><br><span>Mr.Rodolfo Madarang</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Mrs.Precy Madarang</span><br><span>Mr.Nell Dan Blas</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Mrs.Rebecca Natalio</span><br><span>Mr.Jaime Debulusan</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Mrs.Jessel Debulusan</span><br><span>Mr.Rick Asquini</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Mrs.Carol Asquini</span><br><span>Mr. Mark Tejada</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Ms.Monaliza Fandiño</span><br><span>Mr. Vito Bermillo</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Ms.Maggie Flores</span><br><span>Mr.Dong Pante</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Mrs.Bernadette Medillo</span><br><span>Mr.Bobby Munsayac</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Ms.Mary Grace Goldie Castil</span><br><span>Mr. Joel Batu</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Atty. Michelle Sabillo</span><br><span>Mr. Ariel Hamor</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Ms.Jovelyn Jabanes</span><br><span>Mr.Renato Cenera</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Mrs.Olivia Cenera</span><br><span>Mr. Jak Bausa</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Mrs.Jocelyn Navarro</span><br><span>Mr.Fernan Rotarta</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Mrs.Tracy Ann Rotarta</span><br><span>Mr.Gerardo Macamay</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Mrs.Jovelyn Macamay</span><br><span>Mr.Edwin Caguioa</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Mrs.Myrna Caguioa</span><br><span>Mr. Edgardo Matienzo</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Mrs. Edna Matienzo</span><br><span>Mr.Roberto Lorea</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Mrs.Leona Lorea</span><br><span>Mr.Ricky Santos</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Mrs.Rizalina Santos</span><br><span>Mr.Jacinto Lama</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Mrs.Elvira Lama</span>
+          <span class="header">Principal Sponsors</span><br><br><span>Hon.Robert Ortega</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Hon.Charry Ortega</span><br><span>Hon.Joshue Santiago</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Hon.Rowenda Santiago</span><br><span>Hon.Alexander Cordova</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Mrs.Amelia Cordova</span><br><span>Mr.Luis Vicillaje</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Mrs.Pinky Mendoza</span><br><span>Mr.Rodolfo Madarang</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Mrs.Precy Madarang</span><br><span>Mr.Nell Dan Blas</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Mrs.Rebecca Natalio</span><br><span>Mr.Jaime Debulusan</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Mrs.Jessel Debulusan</span><br><span>Mr.Rick Asquini</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Mrs.Carol Asquini</span><br><span>Mr. Mark Tejada</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Ms.Monaliza Fandiño</span><br><span>Mr. Vito Bermillo</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Ms.Maggie Flores</span><br><span>Mr.Dong Pante</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Mrs.Bernadette Medillo</span><br><span>Mr.Bobby Munsayac</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Ms.Mary Grace Goldie Castil</span><br><span>Mr. Joel Batu</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Atty. Michelle Sabillo</span><br><span>Mr. Ariel Hamor</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Ms.Jovelyn Jabanes</span><br><span>Mr.Renato Cenera</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Mrs.Olivia Cenera</span><br><span>Mr. Jak Bausa</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Mrs.Jocelyn Navarro</span><br><span>Mr.Fernan Rotarta</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Mrs.Tracy Ann Rotarta</span><br><span>Mr.Gerardo Macamay</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Mrs.Jovelyn Macamay</span><br><span>Mr.Edwin Caguioa</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Mrs.Myrna Caguioa</span><br><span>Mr. Edgardo Matienzo</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Mrs. Edna Matienzo</span><br><span>Mr.Roberto Lorea</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Mrs.Leona Lorea</span><br><span>Mr.Ricky Santos</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Mrs.Rizalina Santos</span><br><span>Mr.Jacinto Lama</span>&nbsp;&nbsp; | &nbsp;&nbsp;<span>Mrs.Elvira Lama</span>
         </div>
       </div>
     </div>
-
+    <br><br>
+    <div class="webpage-entourage-wrapmain-double">
+      <div class="webpage-entourage-entry">
+        <div class="webpage-entourage-details">
+          <span class="header">Maid of Honor</span><br><br><span>Eloisa Igos</span>
+        </div>
+      </div>
+      <div class="webpage-entourage-entry">
+        <div class="webpage-entourage-details">
+          <span class="header">Best man</span><br><br><span>Jonee Carlo Madarang</span>
+        </div>
+      </div>
+    </div>
+    <br><br>
+    <div class="webpage-entourage-wrapmain-double">
+      <div class="webpage-entourage-entry">
+        <div class="webpage-entourage-details">
+          <span class="header">Bridesmaids</span><br><br><span>Allexandra Molina</span><br><span>Nephi Molina</span><br><span>Anna Mae Madarang</span><br><span>Ashley Marie Teves</span><br><span>Abegail Peliño</span><br><span>Anisah Malmal</span><br><span>Reema Ahmad</span><br><span>Danica Mae Cainoy</span><br><span>Jaymee Razon</span>
+        </div>
+      </div>
+      <div class="webpage-entourage-entry">
+        <div class="webpage-entourage-details">
+          <span class="header">Groomsmen</span><br><br><span>Karl Siochi</span><br><span>Jeric Esasi</span><br><span>Michael Dacules</span><br><span>Giane Trajano</span><br><span>Jameson Rivera</span><br><span>Glen Cadion</span><br><span>Darren Silvestre</span><br><span>John Paul Opider</span><br><span>Rico Razon</span>
+        </div>
+      </div>
+    </div>
+    <br><br>
+    <div class="webpage-entourage-title"><span style="font-size: 55px; font-family: 'Dancing Script', cursive;">Secondary Sponsor</span></div>
+    <br><br>
+    <div class="webpage-entourage-wrapmain-triple">
+      <div class="webpage-entourage-entry">
+        <div class="webpage-entourage-details">
+          <span class="header">To Light our Path (Candle)</span><br><br><span>Ms.Elizabeth Asquini</span><br><span>Ms.Nora Igos</span>
+        </div>
+      </div>
+      <div class="webpage-entourage-entry">
+        <div class="webpage-entourage-details">
+          <span class="header">To Cloth us as One (Veil)</span><br><br><span>Ms.Jhomarie Yambao</span><br><span>Mr.Ed Balangue</span>
+        </div>
+      </div>
+      <div class="webpage-entourage-entry">
+        <div class="webpage-entourage-details">
+          <span class="header">To Bind us Together (Cord)</span><br><br><span>Ms.Angelica Marie Yambao</span><br><span>Mr.Renchester Amores</span>
+        </div>
+      </div>
+    </div>
+    <br><br>
+    <div class="webpage-entourage-wrapmain-double">
+      <div class="webpage-entourage-entry">
+        <div class="webpage-entourage-details">
+          <span class="header">Bible Bearer</span><br><br><span>Aaran Eisen Yambao</span>
+        </div>
+      </div>
+      <div class="webpage-entourage-entry">
+        <div class="webpage-entourage-details">
+          <span class="header">Ring Bearer</span><br><br><span>Isaac Trongco</span>
+        </div>
+      </div>
+    </div>
+    <br><br>
+    <div class="webpage-entourage-wrapmain-triple">
+      <div class="webpage-entourage-entry">
+        <div class="webpage-entourage-details">
+          <span class="header">Coin Bearer</span><br><br><span>Kylie Cañete</span>
+        </div>
+      </div>
+      <div class="webpage-entourage-entry">
+        <div class="webpage-entourage-details">
+          <span class="header">Flower Girls</span><br><br><span>Kirstin Psaby Molina</span><br><span>Kaelyn Lolita Francia</span><br><span>Savanna Madarang</span><br><span>Alyssa Catamisan</span>
+        </div>
+      </div>
+      <div class="webpage-entourage-entry">
+        <div class="webpage-entourage-details">
+          <span class="header">Banner Bearer</span><br><br><span>Ayesha Carangan</span>
+        </div>
+      </div>
+    </div>
   </div>
 
   <div class="webpage-photos">
