--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="./css/webs/proposal.css">
   <link rel="stylesheet" href="./css/webs/story.css">
   <link rel="stylesheet" href="./css/webs/home.css">
+  <link rel="stylesheet" href="./css/webs/qanda.css">
   <link rel="stylesheet" href="./css/webs/entourage.css">
   <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,400i,500,500i,700,700i" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
@@ -42,13 +43,28 @@
     </button>
 
     <!-- PROPOSAL -->
-    <!-- <button class="webpage-menu-options" id="proposal-button">
+    <button class="webpage-menu-options" id="proposal-button">
       <a>THE PROPOSAL</a>
-    </button> -->
+    </button>
 
     <!-- ENTOURAGE -->
     <button class="webpage-menu-options" id="entourage-button">
       <a>ENTOURAGE</a>
+    </button>
+
+    <!-- Q+A -->
+    <button class="webpage-menu-options" id="qanda-button">
+      <a>FAQS</a>
+    </button>
+
+    <!-- DIRECTIONS -->
+    <button class="webpage-menu-options" id="directions-button">
+      <a>DIRECTIONS</a>
+    </button>
+
+    <!-- ATTIRE -->
+    <button class="webpage-menu-options" id="attire-button">
+      <a>ATTIRE</a>
     </button>
   </div>
 
@@ -211,6 +227,9 @@
   </div>
 
   <div class="webpage-story">
+    <div class="webpage-welcome-contents">
+      <span style="font-size: 25px;">FACEBOOK LOVERS</span><br><br>
+    </div>
     <div class="webpage-story-wrapmain">
       <div class="webpage-story-entry">
         <div class="webpage-story-information">
@@ -224,10 +243,72 @@
         </div>
       </div>
     </div>
+    <div class="webpage-welcome-contents">
+      <br><br><span style="color: white; font-size: 25px;">Who would’ve thought a single friend request would turn into something so special
+        and beautiful?</span><br><br><span style="color: white; font-size: 25px;">In 2017, Ellie added Cjhay on Facebook. From the day she laid eyes on his
+          facebook she found the one. After that Cjhay messaged Ellie “TFTA” which means
+          Thanks for the add and they did the “kamustahan and landian” the usual online
+          couple do.... To be continued......</span><br><br><br><br>
+    </div>
   </div>
 
   <div class="webpage-proposal">
+    <div class="webpage-welcome-title"> The Proposal </div>
+    <div class="webpage-wrapmain">
+      <div class="webpage-entry">
+        <div class="webpage-information">
+          <img class="webpage-information img" onclick="showPopup('image/Proposal 1.jpeg')" src="image/Proposal 1.jpeg">
+        </div>
+      </div>
 
+      <div class="webpage-entry">
+        <div class="webpage-information">
+          <img class="webpage-information img" onclick="showPopup('image/Proposal 2.jpeg')" src="image/Proposal 2.jpeg">
+        </div>
+      </div>
+
+      <div class="webpage-entry">
+        <div class="webpage-information">
+          <img class="webpage-information img" onclick="showPopup('image/Proposal 3.jpeg')" src="image/Proposal 3.jpeg">
+        </div>
+      </div>
+
+      <div class="webpage-entry">
+        <div class="webpage-information">
+          <img class="webpage-information img" onclick="showPopup('image/Proposal 4.jpeg')" src="image/Proposal 4.jpeg">
+        </div>
+      </div>
+
+      <div class="webpage-entry">
+        <div class="webpage-information">
+          <img class="webpage-information img" onclick="showPopup('image/Proposal 5.jpeg')" src="image/Proposal 5.jpeg">
+        </div>
+      </div>
+
+      <div class="webpage-entry">
+        <div class="webpage-information">
+          <img class="webpage-information img" onclick="showPopup('image/Proposal 6.jpeg')" src="image/Proposal 6.jpeg">
+        </div>
+      </div>
+
+      <div class="webpage-entry">
+        <div class="webpage-information">
+          <img class="webpage-information img" onclick="showPopup('image/Proposal 7.jpeg')" src="image/Proposal 7.jpeg">
+        </div>
+      </div>
+
+      <div class="webpage-entry">
+        <div class="webpage-information">
+          <img class="webpage-information img" onclick="showPopup('image/Proposal 8.jpeg')" src="image/Proposal 8.jpeg">
+        </div>
+      </div>
+
+      <div class="webpage-entry">
+        <div class="webpage-information">
+          <img class="webpage-information img" onclick="showPopup('image/Proposal 9.jpeg')" src="image/Proposal 9.jpeg">
+        </div>
+      </div>
+    </div>
   </div>
 
   <div id="imagePopup" class="overlay" onclick="hidePopup()">
