--- a/index.html
+++ b/index.html
@@ -11,14 +11,18 @@
   <link rel="stylesheet" href="./css/webs/proposal.css">
   <link rel="stylesheet" href="./css/webs/story.css">
   <link rel="stylesheet" href="./css/webs/home.css">
-  <link rel="stylesheet" href="./css/webs/qanda.css">
+  <link rel="stylesheet" href="./css/webs/questions.css">
   <link rel="stylesheet" href="./css/webs/entourage.css">
+  <link rel="stylesheet" href="./css/webs/directions.css">
+  <link rel="stylesheet" href="./css/webs/attire.css">
   <link href="https://fonts.googleapis.com/css?family=Oswald:300,400,400i,500,500i,700,700i" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Sofia&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Nixie+One&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Italianno&family=Nixie+One&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Platypi:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Platypi:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="./js/script.js"></script>
   <!-- <script src="nui://game/ui/jquery.js" type="text/javascript"></script> -->
@@ -27,6 +31,8 @@
 
 <body>
   <div class="webpage-column">
+    <div class="flower-design-left"></div>
+    <div class="flower-design-right"></div>
     <!-- HOME -->
     <button class="webpage-menu-options" id="home-button">
       <a>Home</a>
@@ -53,7 +59,7 @@
     </button>
 
     <!-- Q+A -->
-    <button class="webpage-menu-options" id="qanda-button">
+    <button class="webpage-menu-options" id="questions-button">
       <a>Q+A</a>
     </button>
 
@@ -306,6 +312,88 @@
       <div class="webpage-entry">
         <div class="webpage-information">
           <img class="webpage-information img" onclick="showPopup('image/Proposal 9.jpeg')" src="image/Proposal 9.jpeg">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="webpage-questions">
+    <div class="webpage-questions-title"><span style="font-size: 55px; font-family: 'Dancing Script', cursive;">FAQS</span><br><br></div>
+    <div class="webpage-questions-contents">
+      <div class="webpage-questions-wrapmain-single">
+        <div class="webpage-questions-entry">
+          <div class="webpage-questions-details">
+            <span class="webpage-questions-header">DO YOU HAVE ANY PREFERENCES FOR WEDDING GIFTS?</span><br><br><span class="webpage-questions-description">Please do not be obliged to buy us a gift since your presence is all that we request.
+              However, if you wish to give us something, monetary blessings as we build our
+              forever home would be very much appreciated.</span>
+          </div>
+        </div>
+
+        <div class="webpage-questions-entry">
+          <div class="webpage-questions-details">
+            <span class="webpage-questions-header">CAN I BRING A PLUS ONE?</span><br><br><span class="webpage-questions-description">Unfortunately, due to the limited capacity of the venue and the number of guests
+              attending,
+              we kindly request that you ONLY bring a guest if you were specifically given a plus
+              one on your invitation. We hope you understand.</span>
+          </div>
+        </div>
+
+        <div class="webpage-questions-entry">
+          <div class="webpage-questions-details">
+            <span class="webpage-questions-header">CAN I BRING MY
+              CHILD/CHILDREN TO THE WEDDING?</span><br><br><span class="webpage-questions-description">We genuinely appreciate your understanding that our wedding day is tailored for
+                adults to fully enjoy the celebration. Unless we've expressly indicated otherwise, we
+                kindly request that you refrain from including children in the festivities. Thank you for
+                your understanding.</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="webpage-directions">
+    <div class="webpage-directions-title"><span style="font-size: 55px; font-family: 'Dancing Script', cursive;">DIRECTION / RECEPTION</span><br><br></div>
+    <div class="webpage-directions-contents">
+      <div class="webpage-directions-wrapmain-single">
+        <div class="webpage-directions-entry">
+          <div class="webpage-directions-details">
+            <span class="webpage-directions-header">DIRECTION</span><br><br><span class="webpage-directions-description">Ceremony (12PM)
+              San Vicente De Paul Parish
+              959 San Marcelino St, Ermita, Manila, (Adamson University)
+              <a href="https://maps.app.goo.gl/Rgx3hu6UgZvWZQ9j6" style="color: rgb(60, 96, 173);">https://maps.app.goo.gl/Rgx3hu6UgZvWZQ9j6</a></span><br><br>
+              <div class="webpage-information">
+                <img class="webpage-information img" onclick="showPopup('image/directions.png')" src="image/directions.png">
+              </div>
+          </div>
+        </div>
+
+        <div class="webpage-directions-entry">
+          <div class="webpage-directions-details">
+            <span class="webpage-directions-header">RECEPTION</span><br><br><span class="webpage-directions-description">Philippine Columbian Association
+              PCA Complex, Plaza Dilao, Canonigo St., Paco, Manila
+              <a href="https://maps.app.goo.gl/qnjo7Nkp76pfDSPT9" style="color: rgb(60, 96, 173);">https://maps.app.goo.gl/qnjo7Nkp76pfDSPT9</a></a></span><br><br>
+              <div class="webpage-information">
+                <img class="webpage-information img" onclick="showPopup('image/reception.png')" src="image/reception.png">
+              </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="webpage-attire">
+    <div class="webpage-attire-title"><span style="font-size: 55px; font-family: 'Dancing Script', cursive;">ATTIRE</span><br><br></div>
+    <div class="webpage-attire-contents">
+      <div class="webpage-attire-wrapmain-single">
+        <div class="webpage-attire-entry">
+          <div class="webpage-attire-details">
+            <span class="webpage-attire-description">WE WOULD LOVE TO SEE YOU IN YOUR FORMAL ATTIRE. WE ENCOURAGE OUR GUEST
+              TO WEAR THESE COLORS ON OUR SPECIAL DAY.</span><br><br>
+              <div class="webpage-information">
+                <img style="height: 150px; width: 250px;" class="webpage-information img" onclick="showPopup('image/color.png')" src="image/color.png">
+              </div>
+            <br><span class="webpage-attire-description">SAGE GREEN AND EMERALD GREEN</span><br><br>
+          </div>
         </div>
       </div>
     </div>
