--- a/index.html
+++ b/index.html
@@ -31,8 +31,6 @@
 
 <body>
   <div class="webpage-column">
-    <div class="flower-design-left"></div>
-    <div class="flower-design-right"></div>
     <!-- HOME -->
     <button class="webpage-menu-options" id="home-button">
       <a>Home</a>
@@ -73,7 +71,11 @@
       <a>ATTIRE</a>
     </button>
   </div>
-
+  <!-- <div class="right-side-flower"></div>
+  <div class="left-side-flower"></div> -->
+  <div class="flower-design-left"></div>
+  <div class="flower-design-right"></div>
+  <div class="flower-design-center"></div>
   <!-- HOME -->
   <div class="webpage-home">
     <div class="webpage-welcome">
