--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
       <a>OUR STORY</a>
     </button>
 
-    <!-- PHOTOS -->
-    <button class="webpage-menu-options" id="photos-button">
-      <a>PRENUP PHOTOS</a>
-    </button>
-
     <!-- PROPOSAL -->
     <button class="webpage-menu-options" id="proposal-button">
       <a>THE PROPOSAL</a>
+    </button>
+
+    <!-- PHOTOS -->
+    <button class="webpage-menu-options" id="photos-button">
+      <a>PRENUP PHOTOS</a>
     </button>
 
     <!-- ENTOURAGE -->
@@ -127,7 +127,7 @@
       </div>
       <div class="webpage-entourage-entry">
         <div class="webpage-entourage-details">
-          <span class="header">Parents of the Bride</span><br><br><span>Mr.Lirco Igos</span><br><span>Mrs.Amelia Igos</span>
+          <span class="header">Parents of the Bride</span><br><br><span>Mr.Lirco Igos +</span><br><span>Mrs.Amelia Igos</span>
         </div>
       </div>
     </div>
