--- a/index.html
+++ b/index.html
@@ -82,7 +82,15 @@
       <div class="webpage-welcome-title"> The Wedding Of </div>
       <div class="webpage-welcome-contents">
         <span style="font-size: 25px;">CJHAY & ELLIE</span> <br><br> <span style="color: white; font-size: 25px;">Cjhay and Ellie joyfully invite you as they speak their vows and join in marriage in
-          the presence of God, Family and Friends.</span><br><br>
+          the presence of God, Family and Friends.</span><br><br><div class="wedding-date">
+            <div class="day">SUNDAY</div>
+            <div class="month-year">
+              <div><span style="color: white; font-size: 35px;">JUNE</span></div>
+              <div class="date"><span style="color: white; font-size: 35px;">30</span></div>
+              <div><span style="color: white; font-size: 35px;">2024</span></div>
+            </div>
+            <div class="time">AT 12 PM</div>
+          </div><br><br><br>
       </div>
 
       <div class="webpage-wrapmain">
